tests/fixtures/invalid/round_list_set.py
# Cannot call round() with List[int], Set[int]
x = round([1, 2, 3], {1, 2, 3})
